--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ buildscript {
             recycler_view_version = '1.0.0'
             robolectric_version = '4.2'
             test_runner_version = '1.1.0'
+            version_room = '2.2.3'
+            version_lifecycle_extensions = '2.2.0'
         }
 }
 
