--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,12 @@ apply plugin: 'kotlin-kapt'
 //apply plugin: 'androidx.navigation.safeargs'
 
 android {
+
+    // Enables data binding.
+    dataBinding {
+        enabled = true
+    }
+
     buildToolsVersion "29.0.2"
 
     defaultConfig {
