adding dagger to project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 
+    // file picker
     implementation 'com.github.TutorialsAndroid:FilePicker:v8.0.19'
+
+    // dagger
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
