--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ buildscript {
             test_runner_version = '1.1.0'
             version_room = '2.2.3'
             version_lifecycle_extensions = '2.2.0'
+            dagger_version = "2.27"
         }
 }
 
