--- a/build.gradle
+++ b/build.gradle
@@ -55,11 +55,12 @@ buildscript {
             archTestingVersion = '2.0.0'
             coroutinesVersion = '1.2.1'
             androidXVersion = '1.0.0'
-            androidXTestCoreVersion = '1.2.0'
+            androidXTestCoreVersion = '1.1.0'
             androidXTestExtKotlinRunnerVersion = '1.1.1'
             espressoVersion = '3.2.0-beta01'
-            fragmentVersion = '1.1.0-alpha07'
+            fragmentVersion = '1.3.0-alpha04'
             fragmentKtxVersion = '1.1.0-rc01'
+            dexMakerVersion = '2.12.1'
         }
 }
 
