--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,6 @@ dependencies {
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dexMakerVersion"
 
     implementation "androidx.fragment:fragment-testing:$fragmentVersion"
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 }
