--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     implementation 'com.qhutch.elevationimageview:elevationimageview:1.7'
+
+    implementation 'com.github.timrijckaert:FloatingMusicActionButton:v2.0.4'
 }
