--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -61,6 +61,10 @@ buildscript {
             fragmentVersion = '1.3.0-alpha04'
             fragmentKtxVersion = '1.1.0-rc01'
             dexMakerVersion = '2.12.1'
+
+            version_retrofit = "2.5.0"
+            version_moshi = "1.8.0"
+            version_retrofit_coroutines_adapter = "0.9.2"
         }
 }
 
