--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
     implementation 'com.squareup.retrofit2:converter-simplexml:2.6.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
 //    // Moshi
     implementation "com.squareup.moshi:moshi:$version_moshi"
