--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,13 +104,9 @@ dependencies {
 
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dexMakerVersion"
 
-    implementation "androidx.fragment:fragment-testing:$fragmentVersion"
+    debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
 
     implementation 'com.github.bumptech.glide:glide:4.10.0'
-
-    implementation 'com.qhutch.elevationimageview:elevationimageview:1.7'
-
-    implementation 'com.github.timrijckaert:FloatingMusicActionButton:v2.0.4'
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
