--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
 
     defaultConfig {
         applicationId "stas.batura.musicproject"
-        versionCode 2
-        versionName "1.0"
+        versionCode 5
+        versionName "1.02"
 
         minSdkVersion  23
         targetSdkVersion 29
@@ -117,14 +117,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-simplexml:2.6.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
-//    // Moshi
+   // Moshi
     implementation "com.squareup.moshi:moshi:$version_moshi"
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
-//
-//    // Retrofit with Moshi Converter
+
+    // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
-//
-//    // Retrofit Coroutines Support
+
+    // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
     // Add the Firebase SDK for Google Analytics
@@ -132,4 +132,6 @@ dependencies {
 
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     implementation 'me.samlss:lighter:1.0.3'
+
+    implementation 'com.github.since85stas:RateLib:-SNAPSHOT'
 }
