fixing moving string freeze bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
 
     defaultConfig {
         applicationId "stas.batura.musicproject"
-        versionCode 7
-        versionName "1.04"
+        versionCode 8
+        versionName "1.05"
 
         minSdkVersion  23
         targetSdkVersion 29
@@ -33,6 +33,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        customDebugType {
+            debuggable true
         }
     }
 
